<resources>
    <string name="app_name">Cyclotrack</string>
    <string name="action_settings">Settings</string>
    <string name="trip_summaries_fragment_label">Trip Summaries Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="zero">0.0</string>
    <string name="location_fix_obtained">Location fix obtained</string>
    <string name="trip_summary_image_description">Trip map or default image</string>
    <string name="trip_title_placeholder">Trip Title</string>
    <string name="time_placeholder">HH:mm</string>
    <string name="time_ago_placeholder">XX days ago</string>
    <string name="cyclotrack_summary_map_id">c2e079ebb492f6ef</string>
    <string name="start_label">START</string>
    <string name="pause_label">PAUSE</string>
    <string name="stop_label">STOP</string>
    <string name="resume_label">RESUME</string>
    <string name="label_placeholder">LABEL</string>
    <string name="start_dashboard_button_description">Touch this button to enter dashboard</string>
    <string name="action_cleanup">Cleanup</string>
    <string name="details_menu_title_edit">Edit</string>
    <string name="details_menu_title_delete">Delete</string>
    <string name="preferences_paired_ble_devices_key">paired_ble_devices</string>
    <string name="scanning_for_ble_devices">Scanning for BLE devices...</string>
    <string name="saved_devices_label">Linked devices</string>
    <string name="discovered_devices_label">Discovered devices</string>
    <string name="sensor_linking_instructions">Link up to three devices, each of a unique supported type: cadence, speed, and heart rate.</string>
    <string name="bike_sensor_linking_instructions">Link up to three devices. It is recommended that you only link sensors that are attached to this bike, such as cadence and speed.</string>
    <string name="body_sensor_linking_instructions">Link up to three devices. It is recommended that you only link sensors attached to your body, like heart rate monitors.</string>
    <string name="preferences_biometrics_key">biometrics</string>
    <string name="preference_key_biometrics_user_sex">preference_key_biometrics_user_sex</string>
    <string name="preference_key_biometrics_user_weight">preference_key_biometrics_user_weight</string>
    <string name="preference_key_biometrics_user_height">preference_key_biometrics_user_height</string>
    <string name="preference_key_biometrics_user_age">preference_key_biometrics_user_age</string>
    <string name="preference_key_biometrics_user_vo2max">preference_key_biometrics_user_vo2max</string>
    <string name="preference_key_biometrics_user_restingHeartRate">preference_key_biometrics_user_restingHeartRate</string>
    <string name="preference_key_biometrics_user_maxHeartRate">preference_key_biometrics_user_maxHeartRate</string>
    <string name="preference_key_system_of_measurement">display_units</string>
    <string name="preference_key_biometrics_user_dob">preference_key_biometrics_user_date_of_birth</string>
    <string name="preference_key_biometrics_use_google_fit_biometrics">preference_key_biometrics_use_google_fit_biometrics</string>
    <string name="preferences_clear_preferences_key">preferences_clear_preferences</string>
    <string name="preference_biometrics_instruction_text">This information is used to estimate Calorie burn during rides.</string>
    <string name="preference_biometrics_instruction_text_verbose">This information is used to estimate Calorie burn during rides. Fill in your weight to get a METs-based Calorie estimate. If you have linked a heart rate monitor, fill in your sex, date of birth (age), and VO2Max for a more accurate estimate.</string>
    <string name="preference_biometrics_hrm_calorie_instruction_text">If you have a heart rate monitor linked, specify your sex, date of birth, and resting heart rate to enable heart rate based estimates.</string>
    <string name="preference_biometrics_hrm_net_calorie_instruction_text">If you would like to display net Calorie burn instead of gross, please include your height. This will subtract your estimated basal metabolic rate from heart rate based Calorie estimates.</string>
    <string name="preference_biometrics_sex_field_heading">Sex</string>
    <string name="preference_biometrics_label_sex_male">Male</string>
    <string name="preference_biometrics_label_sex_female">Female</string>
    <string name="preference_biometrics_label_dob">Date of birth</string>
    <string name="preference_biometrics_label_restingHeartRate">Resting heart rate</string>
    <string name="biometric_preferences_no_data_hint">This information is used to estimate calorie burn during rides. Enter your weight to enable calorie burn estimates.</string>
    <string name="biometrics_preferences_weight_only_hint">Calorie burn will be estimated based on average speed.</string>
    <string name="biometrics_preferences_gross_calories_hint">Heart rate data will be used to estimate gross calorie burn when available.</string>
    <string name="biometric_resources_net_calories_hint">Heart rate data will be used to estimate net calorie burn when available.</string>
    <string name="preferences_dashboard_brightness_key">preference_dashboard_brightness</string>
    <string name="preferences_dashboard_brightness_toggle_key">dashboard_brightness_toggle</string>
    <string name="preferences_system_of_measurement_key">display_units</string>
    <string name="preferences_privacy_policy_key">privacy_policy</string>
    <string name="preference_key_wheel_circumference">wheel_circumference</string>
    <string name="details_menu_title_export_csv">Export CSV</string>
    <string name="details_menu_title_export_xlsx">Export XLSX</string>
    <string name="notification_export_trip_in_progress_id">notification_export_trip_in_progress_id</string>
    <string name="notification_export_trip_in_progress_name">Export ride data in progress</string>
    <string name="notification_export_trip_id">notification_export_trip_complete_id</string>
    <string name="notification_export_trip_name">Export ride data complete</string>
    <string name="notification_channel_description_export_trip">Indicates that data has been exported.</string>
    <string name="intent_action_delete_exported_data">com.kvl.cyclotrack.action.DELETE_EXPORTED_DATA</string>
    <string name="bearing_icon_description">Bearing icon</string>
    <string name="action_stitch">Stitch</string>
    <string name="action_summaryview_multiselect_enabled">com.kvl.cyclotrack.action_summaryview_multiselect_enabled</string>
    <string name="action_clear_multiselect">Cancel</string>
    <string name="action_delete">Delete</string>
    <string name="preferences_key_strava">preferences_key_strava</string>
    <string name="preferences_sync_with_strava_title">Connect with Strava</string>
    <string name="preferences_sync_with_strava_summary">Sign in to Strava to sync your workouts</string>
    <string name="preferences_disconnect_strava_title">Disconnect from Strava</string>
    <string name="preferences_disconnect_strava_summary">Sign out from Strava to stop syncing activities</string>
    <string name="strava_sync_dialog_description">Sign in to Strava to sync your workouts. Data from your rides, including location, heart rate, speed, and cadence will be shared with and stored in Strava.</string>
    <string name="strava_logout_dialog_message">You are about to logout from your Strava Account and stop sharing data with Strava. Your rides will no longer be synchronized with Strava. If you would like to remove your Cyclotrack rides from Strava please visit the Strava app.</string>
    <string name="preferences_key_google_fit">preferences_key_google_fit</string>
    <string name="preferences_sync_with_google_fit_title">Sync with Google Fit</string>
    <string name="preferences_sync_with_google_fit_summary">Sign in to Google Fit to sync your workouts</string>
    <string name="preferences_disconnect_google_fit_title">Disconnect from Google Fit</string>
    <string name="preferences_disconnect_google_fit_summary">Stop syncing data between Cyclotrack and Google Fit</string>
    <string name="notification_id_trip_in_progress">notification_id_trip_in_progress</string>
    <string name="notification_trip_in_progress_title">Ride in progress</string>
    <string name="notification_export_trip_in_progress_message">Tap to return to dashboard</string>
    <string name="action_initialize_trip_service">com.kvl.cyclotrack::action_initialize_trip_service</string>
    <string name="action_start_trip_service">com.kvl.cyclotrack::action_start_trip_service</string>
    <string name="action_pause_trip_service">com.kvl.cyclotrack::action_pause_trip_service</string>
    <string name="action_resume_trip_service">com.kvl.cyclotrack::action_resume_trip_service</string>
    <string name="details_menu_title_sync">Sync</string>
    <string name="details_menu_title_unsync">Unsync</string>
    <string name="preference_key_useAutoCircumference">useAutoCircumference</string>
    <string name="switch_preference_useAutoCircumference_description">Let Cyclotrack use GPS to calibrate circumference</string>
    <string name="preferences_key_advanced_onboard_sensors">preferences_key_onboard_sensors</string>
    <string name="preferences_key_advanced_use_vo2max_calorie_estimate">preferences_key_advanced_use_vo2max_calorie_estimate</string>
    <string name="switch_preference_useAutoCircumference_title">Speed sensor GPS calibration</string>
    <string name="wind_direction_icon_description">Wind direction</string>
    <string name="wind_icon_description">Wind icon</string>
    <string name="details_menu_title_export_fit">Export FIT</string>
    <string name="preference_key_autopause_enable">preferences_key_autopause_enable</string>
    <string name="preference_key_autopause_pause_threshold">preference_key_autopause_pause_threshold</string>
    <string name="preference_key_autopause_resume_threshold">preference_key_autopause_resume_threshold</string>
    <string name="preference_key_autopause_speed_threshold">preference_key_autopause_speed_threshold</string>
    <string name="preference_key_autopause_manual_override">preferences_key_autopause_manual_override</string>
    <string name="seekbar_preference_autopause_pauseThreshold_title">Pause threshold</string>
    <string name="seekbar_preference_autopause_pauseThreshold_description">
        Seconds to wait before pausing your ride.
        Your speed must be below th speed threshold for this duration before your ride will automatically pause.
        The pause will be recorded at the time you stopped moving.
    </string>
    <string name="seekbar_preference_autopause_resumeThreshold_title">Resume threshold</string>
    <string name="seekbar_preference_autopause_resumeThreshold_description">
        Seconds to wait before resuming your ride.
        Your speed must be above the speed threshold for this duration before your ride with automatically resume.
        Your ride will resume at the time you started moving.
    </string>
    <string name="seekbar_preference_autopause_speedThreshold_title">Speed threshold</string>
    <string name="seekbar_preference_autopause_speedThreshold_description">
        Speed at which pausing and resuming will be triggered.
    </string>
    <string name="switch_preference_autopause_enable_title">Enable Auto-pause</string>
    <string name="switch_preference_autopause_enable_description">Automatically pause and resume rides when not moving.</string>
    <string name="switch_preference_autopause_resume_lockout_title">Auto-pause resume lockout</string>
    <string name="switch_preference_autopause_resume_lockout_description">
        When you press the pause button, the ride will not be resumed until you press resume.
    </string>
    <string name="autopause_label">AUTO-PAUSE</string>
</resources>