<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textAppearance="@style/DashboardFontAppearance"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">

    <TextView
        android:id="@+id/measurement_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="none"
        android:maxLines="1"
        android:text="@string/zero"
        android:textAlignment="viewStart"
        android:textAppearance="@style/DashboardFontAppearance"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/measurement_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/measurement_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_placeholder"
        android:textAlignment="textEnd"
        android:textAppearance="@style/DashboardFontAppearance"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/measurement_value"
        app:layout_constraintTop_toBottomOf="@id/measurement_value" />

    <TextView
        android:id="@+id/measurement_extra_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="88%"
        android:textAlignment="textEnd"
        android:textAppearance="@style/DashboardFontAppearance"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/measurement_extra_info_icon"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/measurement_extra_info_icon"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/location_fix_obtained"
        android:src="@drawable/ic_battery_alert_24"
        app:layout_constraintBottom_toBottomOf="@id/measurement_label"
        app:layout_constraintEnd_toStartOf="@id/measurement_label"
        app:layout_constraintStart_toEndOf="@id/measurement_extra_info"
        app:layout_constraintTop_toTopOf="@id/measurement_label" />
</merge>
