<?xml version="1.0" encoding="utf-8"?>
<com.kvl.cyclotrack.TripSummaryCard xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/trip_summary_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    card_view:cardCornerRadius="8dp"
    card_view:contentPadding="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.gms.maps.MapView xmlns:map="http://schemas.android.com/apk/res-auto"
            android:id="@+id/trip_summary_map"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:contentDescription="@string/trip_summary_image_description"
            app:layout_constraintBottom_toTopOf="@id/trip_summary_details"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            map:liteMode="true" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/trip_summary_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:paddingStart="8dp"
            app:layout_constraintTop_toBottomOf="@id/trip_summary_map">

            <TextView
                android:id="@+id/trip_summary_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trip_title_placeholder"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@id/trip_summary_start_time"
                app:layout_constraintEnd_toStartOf="@id/trip_summary_date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/trip_summary_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/time_ago_placeholder"
                android:textSize="18sp"
                app:layout_constraintBaseline_toBaselineOf="@id/trip_summary_title"
                app:layout_constraintBottom_toTopOf="@id/trip_summary_start_time"
                app:layout_constraintStart_toEndOf="@id/trip_summary_title" />

            <TextView
                android:id="@+id/trip_summary_start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_placeholder"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/trip_summary_title" />

            <TextView
                android:id="@+id/trip_summary_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/time_ago_placeholder"
                android:textSize="18sp"
                app:layout_constraintBaseline_toBaselineOf="@id/trip_summary_start_time"
                app:layout_constraintStart_toEndOf="@id/trip_summary_start_time" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.kvl.cyclotrack.TripSummaryCard>